Changed picture src

--- a/4. INTRODUCTION TO HTML & CSS - EXERCISE/WebContent/Exercise_05/Solution/index.html
+++ b/4. INTRODUCTION TO HTML & CSS - EXERCISE/WebContent/Exercise_05/Solution/index.html
@@ -21,7 +21,7 @@
 				of standing on tiptoes when upright."
 			</p>
 			<img
-				src="D:\HTML+CSS 2019\4. INTRODUCTION TO HTML & CSS - EXERCISE\WebContent\Exercise_05\Requirements-and-Resources\img\cat.jpg">
+				src="\WebContent\Exercise_05\Requirements-and-Resources\img\cat.jpg">
 		</article>
 	</section>
 </body>
