--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -10,6 +10,34 @@
 	crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css" type="text/css" />
 <script src="javascript/styles.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+	$(document).ready(function() {
+		// Add smooth scrolling to all links
+		$("a").on('click', function(event) {
+
+			// Make sure this.hash has a value before overriding default behavior
+			if (this.hash !== "") {
+				// Prevent default anchor click behavior
+				event.preventDefault();
+
+				// Store hash
+				var hash = this.hash;
+
+				// Using jQuery's animate() method to add smooth page scroll
+				// The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+				$('html, body').animate({
+					scrollTop : $(hash).offset().top
+				}, 1600, function() {
+
+					// Add hash (#) to URL when done scrolling (default click behavior)
+					window.location.hash = hash;
+				});
+			} // End if
+		});
+	});
+</script>
 </head>
 <body>
 	<header id="header">
@@ -19,20 +47,20 @@
 	</header>
 	<main>
 	<nav class="navigation" id="my-navigation">
-		<a href="#header" class="active">Home</a> <a href="#my-info">About</a> <a
-			href="#services">Services</a> <a href="#skills">Skills</a> <a
+		<a href="#header" class="active">Home</a> <a href="#about-me">About</a>
+		<a href="#services">Services</a> <a href="#skills">Skills</a> <a
 			href="#repositories">Repositories</a> <a href="#contacts">Contacts</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			<i class="fa fa-bars"></i>
 		</a>
 	</nav>
 
-	<section class="about-me">
-		<div class="header">
+	<section class="about-me" id="about-me">
+		<div class="header-about-me">
 			<h1>About Me</h1>
 			<p>A few words about me</p>
 		</div>
-		<div class="my-info" id="my-info">
+		<div class="my-info">
 			<div class="agile-left">
 				<img src="images/ab.jpg" alt="">
 			</div>
@@ -62,6 +90,34 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="services" id="services">
+		<div class="header-services">
+			<h1>What i do for you</h1>
+			<p>See my services</p>
+		</div>
+		<div class="service-container">
+			<div class="service">
+				<i class="fa fa-cog"></i>
+				<h4>Why choose me</h4>
+				<p>Fast learning, diligent,  I’m determined to contribute to the company /
+				 project success doing whatever it takes!</p>
+			</div>
+			<div class="service">
+				<i class="fa fa-laptop"></i>
+				<h4>What I do</h4>
+				<p>Flawes JavaEE / Spring MVC / Hibernate coding, spiced with good HTML5 and SQL understanding.</p>
+			</div>
+			<div class="service">
+				<i class="far fa-thumbs-up"></i>
+				<h4>My mission</h4>
+				<p>To deliver the next generation of information technology services and solutions,
+				exceeding  all client expectations.</p>
+			</div>
+		</div>
+	</section>
+		
+	
 	</main>
 	<footer> </footer>
 </body>
