--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -100,24 +100,128 @@
 			<div class="service">
 				<i class="fa fa-cog"></i>
 				<h4>Why choose me</h4>
-				<p>Fast learning, diligent,  I’m determined to contribute to the company /
-				 project success doing whatever it takes!</p>
+				<p>Fast learning, diligent, I’m determined to contribute to the
+					company / project success doing whatever it takes!</p>
 			</div>
 			<div class="service">
 				<i class="fa fa-laptop"></i>
 				<h4>What I do</h4>
-				<p>Flawes JavaEE / Spring MVC / Hibernate coding, spiced with good HTML5 and SQL understanding.</p>
+				<p>Flawes JavaEE / Spring MVC / Hibernate coding, spiced with
+					good HTML5 and SQL understanding.</p>
 			</div>
 			<div class="service">
 				<i class="far fa-thumbs-up"></i>
 				<h4>My mission</h4>
-				<p>To deliver the next generation of information technology services and solutions,
-				exceeding  all client expectations.</p>
+				<p>To deliver the next generation of information technology
+					services and solutions, exceeding all client expectations.</p>
 			</div>
 		</div>
 	</section>
-		
-	
+	<section class="skills" id="skills">
+		<div class="education">
+			<h1>My education</h1>
+			<div class="education-uni">
+				<div class="education-year">
+					<h4>2014-2015</h4>
+					<h6>
+						Master<br>Degree
+					</h6>
+				</div>
+				<div class="education-info">
+					<h4>COMPUTER UNIVERSITY</h4>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+				</div>
+			</div>
+			<div class="education-uni">
+				<div class="education-year">
+					<h4>2014-2015</h4>
+					<h6>
+						Master<br>Degree
+					</h6>
+				</div>
+				<div class="education-info">
+					<h4>COMPUTER UNIVERSITY</h4>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+				</div>
+			</div>
+			<div class="education-uni">
+				<div class="education-year">
+					<h4>2014-2015</h4>
+					<h6>
+						Master<br>Degree
+					</h6>
+				</div>
+				<div class="education-info">
+					<h4>COMPUTER UNIVERSITY</h4>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+				</div>
+			</div>
+		</div>
+		<div class="skills-1">
+			<h1>My skills</h1>
+		</div>
+	</section>
+	<section class="skills">
+		<div class="skills-2">
+			<h1>My skills</h1>
+		</div>
+		<div class="experience">
+			<div class="education">
+				<h1>My education</h1>
+				<div class="education-uni">
+					<div class="education-year">
+						<h4>2014-2015</h4>
+						<h6>
+							Master<br>Degree
+						</h6>
+					</div>
+					<div class="education-info">
+						<h4>COMPUTER UNIVERSITY</h4>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+							Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+					</div>
+				</div>
+				<div class="education-uni">
+					<div class="education-year">
+						<h4>2014-2015</h4>
+						<h6>
+							Master<br>Degree
+						</h6>
+					</div>
+					<div class="education-info">
+						<h4>COMPUTER UNIVERSITY</h4>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+							Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+					</div>
+				</div>
+				<div class="education-uni">
+					<div class="education-year">
+						<h4>2014-2015</h4>
+						<h6>
+							Master<br>Degree
+						</h6>
+					</div>
+					<div class="education-info">
+						<h4>COMPUTER UNIVERSITY</h4>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+							Aenean commodo ligula eget dolor. Aenean massa..</p>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</section>
+
 	</main>
 	<footer> </footer>
 </body>
