Further developing my CV

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -131,7 +131,6 @@
 					<h4>COMPUTER UNIVERSITY</h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 						Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 				</div>
 			</div>
 			<div class="education-uni">
@@ -145,7 +144,6 @@
 					<h4>COMPUTER UNIVERSITY</h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 						Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 				</div>
 			</div>
 			<div class="education-uni">
@@ -159,7 +157,6 @@
 					<h4>COMPUTER UNIVERSITY</h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 						Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 				</div>
 			</div>
 		</div>
@@ -185,7 +182,6 @@
 						<h4>COMPUTER UNIVERSITY</h4>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 							Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 					</div>
 				</div>
 				<div class="education-uni">
@@ -199,7 +195,6 @@
 						<h4>COMPUTER UNIVERSITY</h4>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 							Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 					</div>
 				</div>
 				<div class="education-uni">
@@ -213,13 +208,48 @@
 						<h4>COMPUTER UNIVERSITY</h4>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 							Aenean commodo ligula eget dolor. Aenean massa..</p>
-
 					</div>
 				</div>
 			</div>
 		</div>
+	</section>
 
-
+	<section class="repositories" id="repositories">
+		<h1>My repositories</h1>
+		<p>Check out my work</p>
+		<div class="wrapper">
+			<div class="spring-mvc whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="java-ee whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="hibernate whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="my-sql whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="java-oop whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="java-advanced whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="html-css whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="design-patterns whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+			<div class="game whiten">
+				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			</div>
+		</div>
+	</section>
+	<section class="contacts" id="contacts">
+		<h1>Contact me</h1>
+		<p>Send me a message</p>
 	</section>
 
 	</main>
