--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -51,7 +51,7 @@
 		<a href="#services">Services</a> <a href="#skills">Skills</a> <a
 			href="#repositories">Repositories</a> <a href="#contacts">Contacts</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i>
+			<i class="fa fa-bars nav-icon"></i>
 		</a>
 	</nav>
 
@@ -84,7 +84,7 @@
 				<div class="agile-right-info">
 					<h4>Email Address</h4>
 					<p>
-						<a href="cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
+						<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
 					</p>
 				</div>
 			</div>
@@ -217,43 +217,59 @@
 	<section class="repositories" id="repositories">
 		<h1>My repositories</h1>
 		<p>Check out my work</p>
-		<div class="wrapper">
-			<div class="spring-mvc whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+		<ul class="wrapper">
+			<li class="spring-mvc button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="java-ee whiten button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="hibernate button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="my-sql button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="java-oop button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="html-css button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="design-patterns button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="java-advanced button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			<li class="game button"><a class="link"
+				href="https://github.com/Cvqtko?tab=repositories"></a></li>
+		</ul>
+	</section>
+	</main>
+	<footer id="contacts">
+		<div class="footer-container">
+			<div class="container">
+				<div class="icons">
+					<i class="fas fa-map-marker-alt" id="fas"></i>
+				</div>
+				<h6 id="location">Location</h6>
+				<p>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
-			<div class="java-ee whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			<div class="container email">
+				<div class="icons">
+					<i class="fas fa-envelope" id="fas"></i>
+				</div>
+				<h6 id="mail">Email</h6>
+				<p>
+					<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
+				</p>
 			</div>
-			<div class="hibernate whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="my-sql whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="java-oop whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="java-advanced whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="html-css whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="design-patterns whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
-			</div>
-			<div class="game whiten">
-				<a class="link" href="https://github.com/Cvqtko?tab=repositories"></a>
+			<div class="container">
+				<div class="icons">
+					<i class="fas fa-phone-volume" id="fas"></i>
+				</div>
+				<h6 id="call">Call me</h6>
+				<p>(+359) 879 89 29 14</p>
 			</div>
 		</div>
-	</section>
-	<section class="contacts" id="contacts">
-		<h1>Contact me</h1>
-		<p>Send me a message</p>
-	</section>
-
-	</main>
-	<footer> </footer>
+		<p class="copyright">
+			© 2020 Tsvyatko Kirilov Resume. All Rights Reserved.<a
+				href="https://github.com/Cvqtko">GitHub</a>
+		</p>
+	</footer>
 </body>
 </html>
 
