Some small changes

--- a/17. My CV/WebContent/Exercise_03/Solution/index.html
+++ b/17. My CV/WebContent/Exercise_03/Solution/index.html
@@ -3,77 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<title>Grid Gallery</title>
+<title>Redefining grid with Media Queries</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
-		<ul class="gallery">
-			<li>
-				<a href="#">
-					<img src="images/1.jpg"></img>
-				</a>
-			</li>
-			<li class="big">
-				<a href="#">
-					<img src="images/2.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/3.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/4.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/5.jpg"></img>
-				</a>
-			</li>
-			<li class="big">
-				<a href="#">
-					<img src="images/6.jpg"></img>
-				</a>
-			</li>
-			<li class="big">
-				<a href="#">
-					<img src="images/7.jpg"></img>
-				</a>
-			</li>
-			<li class="big">
-				<a href="#">
-					<img src="images/8.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/9.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/10.jpg"></img>
-				</a>
-			</li>
-			<li class="big">
-				<a href="#">
-					<img src="images/11.jpg"></img>
-				</a>
-			</li>
-			<li  class="big">
-				<a href="#">
-					<img src="images/12.jpg"></img>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="images/13.jpg"></img>
-				</a>
-			</li>
-			
-		</ul>
+	<div class="wrapper">
+		<header>Header</header>
+		<main>Main Content</main>
+		<aside>Sidebar</aside>
+		<footer>Footer</footer>
+	</div>
 </body>
 </html>
