--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -61,27 +61,27 @@
 			<p>A few words about me</p>
 		</div>
 		<div class="my-info">
-			<div class="agile-left">
+			<div class="align-left">
 				<img src="images/ab.jpg" alt="">
 			</div>
-			<div class="agile-right">
-				<div class="agile-right-info">
+			<div class="align-right">
+				<div class="align-right-info">
 					<h4>Job Title</h4>
 					<p>Programmer / Java Developer</p>
 				</div>
-				<div class="agile-right-info">
+				<div class="align-right-info">
 					<h4>Name</h4>
 					<p>Tsvyatko Kirilov</p>
 				</div>
-				<div class="agile-right-info">
+				<div class="align-right-info">
 					<h4>Sex</h4>
 					<p>Male</p>
 				</div>
-				<div class="agile-right-info">
+				<div class="align-right-info">
 					<h4>Address</h4>
 					<p>2 Belmeken Str., Sofia, Bulgaria</p>
 				</div>
-				<div class="agile-right-info">
+				<div class="align-right-info">
 					<h4>Email Address</h4>
 					<p>
 						<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
