--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -46,7 +46,7 @@
 		<p>PROGRAMMER / JAVA DEVELOPER</p>
 	</header>
 	<main>
-	<nav class="navigation" id="my-navigation">
+	<nav class="navigation" id="navigation">
 		<a href="#header" class="active">Home</a> <a href="#about-me">About</a>
 		<a href="#services">Services</a> <a href="#skills">Skills</a> <a
 			href="#repositories">Repositories</a> <a href="#contacts">Contacts</a>
@@ -106,7 +106,7 @@
 			<div class="service">
 				<i class="fa fa-laptop"></i>
 				<h4>What I do</h4>
-				<p>Flawes JavaEE / Spring MVC / Hibernate coding, spiced with
+				<p>Strong Software Developing skills with Java, mixed with
 					good HTML5 and SQL understanding.</p>
 			</div>
 			<div class="service">
