--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -106,7 +106,7 @@
 			<div class="service">
 				<i class="fa fa-laptop"></i>
 				<h4>What I do</h4>
-				<p>Strong Software Developing skills with Java, mixed with
+				<p>Strong Software Developing skills using Java, mixed with
 					good HTML5 and SQL understanding.</p>
 			</div>
 			<div class="service">
@@ -117,7 +117,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="skills" id="skills">
+	<section class="skills">
 		<div class="education">
 			<h1>My education</h1>
 			<div class="education-uni">
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="skills-1">
+		<div class="skills-1" id="skills">
 			<h1>My skills</h1>
 		</div>
 	</section>
