Refactored subheadings and paragraphs

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -58,7 +58,7 @@
 	<section class="about-me" id="about-me">
 		<div class="header-about-me">
 			<h1>About Me</h1>
-			<p>A few words about me</p>
+			<p class="subheading">A few words about me</p>
 		</div>
 		<div class="my-info">
 			<div class="align-left">
@@ -94,7 +94,7 @@
 	<section class="services" id="services">
 		<div class="header-services">
 			<h1>What i do for you</h1>
-			<p>See my services</p>
+			<p class="subheading">See my services</p>
 		</div>
 		<div class="service-container">
 			<div class="service">
@@ -216,7 +216,7 @@
 
 	<section class="repositories" id="repositories">
 		<h1>My repositories</h1>
-		<p>Check out my work</p>
+		<p class="subheading">Check out my work</p>
 		<ul class="wrapper">
 			<li class="spring-mvc button"><a class="link"
 				href="https://github.com/Cvqtko?tab=repositories"></a></li>
