Fixed background images of skills and services

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -46,131 +46,80 @@
 		<p>PROGRAMMER / JAVA DEVELOPER</p>
 	</header>
 	<main>
-	<nav class="navigation" id="navigation">
-		<a href="#header" class="active">Home</a> <a href="#about-me">About</a>
-		<a href="#services">Services</a> <a href="#skills">Skills</a> <a
-			href="#repositories">Repositories</a> <a href="#contacts">Contacts</a>
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars nav-icon"></i>
-		</a>
-	</nav>
+		<nav class="navigation" id="navigation">
+			<a href="#header" class="active">Home</a> <a href="#about-me">About</a>
+			<a href="#services">Services</a> <a href="#skills">Skills</a> <a
+				href="#repositories">Repositories</a> <a href="#contacts">Contacts</a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars nav-icon"></i>
+			</a>
+		</nav>
 
-	<section class="about-me" id="about-me">
-		<div class="header-about-me">
-			<h1>About Me</h1>
-			<p class="subheading">A few words about me</p>
-		</div>
-		<div class="my-info">
-			<div class="align-left">
-				<img src="images/ab.jpg" alt="">
+		<section class="about-me" id="about-me">
+			<div class="header-about-me">
+				<h1>About Me</h1>
+				<p class="subheading">A few words about me</p>
 			</div>
-			<div class="align-right">
-				<div class="align-right-info">
-					<h4>Job Title</h4>
-					<p>Programmer / Java Developer</p>
+			<div class="my-info">
+				<div class="align-left">
+					<img src="images/ab.jpg" alt="">
 				</div>
-				<div class="align-right-info">
-					<h4>Name</h4>
-					<p>Tsvyatko Kirilov</p>
-				</div>
-				<div class="align-right-info">
-					<h4>Sex</h4>
-					<p>Male</p>
-				</div>
-				<div class="align-right-info">
-					<h4>Address</h4>
-					<p>2 Belmeken Str., Sofia, Bulgaria</p>
-				</div>
-				<div class="align-right-info">
-					<h4>Email Address</h4>
-					<p>
-						<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
-					</p>
+				<div class="align-right">
+					<div class="align-right-info">
+						<h4>Job Title</h4>
+						<p>Programmer / Java Developer</p>
+					</div>
+					<div class="align-right-info">
+						<h4>Name</h4>
+						<p>Tsvyatko Kirilov</p>
+					</div>
+					<div class="align-right-info">
+						<h4>Sex</h4>
+						<p>Male</p>
+					</div>
+					<div class="align-right-info">
+						<h4>Address</h4>
+						<p>2 Belmeken Str., Sofia, Bulgaria</p>
+					</div>
+					<div class="align-right-info">
+						<h4>Email Address</h4>
+						<p>
+							<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
+						</p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<section class="services" id="services">
-		<div class="header-services">
-			<h1>What i do for you</h1>
-			<p class="subheading">See my services</p>
-		</div>
-		<div class="service-container">
-			<div class="service">
-				<i class="fa fa-cog"></i>
-				<h4>Why choose me</h4>
-				<p>Fast learning, diligent, I’m determined to contribute to the
-					company / project success doing whatever it takes!</p>
+		<section class="services" id="services">
+			<div class="header-services">
+				<h1>What i do for you</h1>
+				<p class="subheading">See my services</p>
 			</div>
-			<div class="service">
-				<i class="fa fa-laptop"></i>
-				<h4>What I do</h4>
-				<p>Strong Software Developing skills using Java, mixed with
-					good HTML5 and SQL understanding.</p>
-			</div>
-			<div class="service">
-				<i class="far fa-thumbs-up"></i>
-				<h4>My mission</h4>
-				<p>To deliver the next generation of information technology
-					services and solutions, exceeding all client expectations.</p>
-			</div>
-		</div>
-	</section>
-	<section class="skills">
-		<div class="education">
-			<h1>My education</h1>
-			<div class="education-uni">
-				<div class="education-year">
-					<h4>2014-2015</h4>
-					<h6>
-						Master<br>Degree
-					</h6>
+			<div class="service-container">
+				<div class="service">
+					<i class="fa fa-cog"></i>
+					<h4>Why choose me</h4>
+					<p>Fast learning, diligent, I’m determined to contribute to the
+						company / project success doing whatever it takes!</p>
 				</div>
-				<div class="education-info">
-					<h4>COMPUTER UNIVERSITY</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						Aenean commodo ligula eget dolor. Aenean massa..</p>
+				<div class="service">
+					<i class="fa fa-laptop"></i>
+					<h4>What I do</h4>
+					<p>Strong Software Developing skills using Java, mixed with
+						good HTML5 and SQL understanding.</p>
+				</div>
+				<div class="service">
+					<i class="far fa-thumbs-up"></i>
+					<h4>My mission</h4>
+					<p>To deliver the next generation of information technology
+						services and solutions, exceeding all client expectations.</p>
 				</div>
 			</div>
-			<div class="education-uni">
-				<div class="education-year">
-					<h4>2014-2015</h4>
-					<h6>
-						Master<br>Degree
-					</h6>
-				</div>
-				<div class="education-info">
-					<h4>COMPUTER UNIVERSITY</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						Aenean commodo ligula eget dolor. Aenean massa..</p>
-				</div>
-			</div>
-			<div class="education-uni">
-				<div class="education-year">
-					<h4>2014-2015</h4>
-					<h6>
-						Master<br>Degree
-					</h6>
-				</div>
-				<div class="education-info">
-					<h4>COMPUTER UNIVERSITY</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						Aenean commodo ligula eget dolor. Aenean massa..</p>
-				</div>
-			</div>
-		</div>
-		<div class="skills-1" id="skills">
-			<h1>My skills</h1>
-		</div>
-	</section>
-	<section class="skills">
-		<div class="skills-2">
-			<h1>My skills</h1>
-		</div>
-		<div class="experience">
+		</section>
+		<section class="skills">
 			<div class="education">
-				<h1>My education</h1>
+				<h1 class="education-h1">My education</h1>
 				<div class="education-uni">
 					<div class="education-year">
 						<h4>2014-2015</h4>
@@ -211,33 +160,84 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+			<div class="skills-1" id="skills">
+				<h1 class="skills-h1">My skills</h1>
+			</div>
+		</section>
+		<section class="skills">
+			<div class="skills-2">
+				<h1 class="skills-h1">My skills</h1>
+			</div>
+			<div class="experience">
+				<div class="education">
+					<h1 class="education-h1">My education</h1>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
+						</div>
+					</div>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
+						</div>
+					</div>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-	<section class="repositories" id="repositories">
-		<h1>My repositories</h1>
-		<p class="subheading">Check out my work</p>
-		<ul class="wrapper">
-			<li class="spring-mvc button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="java-ee whiten button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="hibernate button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="my-sql button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="java-oop button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="html-css button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="design-patterns button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="java-advanced button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-			<li class="game button"><a class="link"
-				href="https://github.com/Cvqtko?tab=repositories"></a></li>
-		</ul>
-	</section>
+		<section class="repositories" id="repositories">
+			<h1>My repositories</h1>
+			<p class="subheading">Check out my work</p>
+			<ul class="wrapper">
+				<li class="spring-mvc button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="java-ee whiten button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="hibernate button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="my-sql button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="java-oop button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="html-css button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="design-patterns button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="java-advanced button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+				<li class="game button"><a class="link"
+					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+			</ul>
+		</section>
 	</main>
 	<footer id="contacts">
 		<div class="footer-container">
