Added Clickable icons to footer

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -239,23 +239,23 @@
 		<div class="footer-container">
 			<div class="container">
 				<div class="icons">
-					<i class="fas fa-map-marker-alt" id="fas"></i>
+					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
 				<p>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
 			<div class="container email">
 				<div class="icons">
-					<i class="fas fa-envelope" id="fas"></i>
+					<a href="mailto:cvqtkokirilov@gmail.com"><i class="fas fa-envelope" id="fas"></i></a>
 				</div>
-				<h6 id="mail">Email</h6>
+				<h6 id="mail"><a href="mailto:cvqtkokirilov@gmail.com">Email</a></h6>
 				<p>
 					<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
 				</p>
 			</div>
 			<div class="container">
 				<div class="icons">
-					<i class="fas fa-phone-volume" id="fas"></i>
+					<a href="#contacts"><i class="fas fa-phone-volume" id="fas"></i><a>
 				</div>
 				<h6 id="call">Call me</h6>
 				<p>(+359) 879 89 29 14</p>
