--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -239,7 +239,7 @@
 		<div class="footer-container">
 			<div class="container">
 				<div class="icons">
-					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
+					<a href="javascript:void(0);""><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
 				<p>2 Belmeken Str., Sofia, Bulgaria</p>
@@ -255,7 +255,7 @@
 			</div>
 			<div class="container">
 				<div class="icons">
-					<a href="#contacts"><i class="fas fa-phone-volume" id="fas"></i><a>
+					<a href="javascript:void(0);"><i class="fas fa-phone-volume" id="fas"></i><a>
 				</div>
 				<h6 id="call">Call me</h6>
 				<p>(+359) 879 89 29 14</p>
