Added and solved exercise_07 - Gallery

--- a/7. POSITION & FLOAT-EXERCISE/WebContent/Exercise_07/Solution/index.html
+++ b/7. POSITION & FLOAT-EXERCISE/WebContent/Exercise_07/Solution/index.html
@@ -16,6 +16,12 @@
 			<li><img src="images/4.jpg"></li>
 			<li><img src="images/5.jpg"></li>
 			<li><img src="images/6.jpg"></li>
+			<li><img src="images/2.jpg"></li>
+			<li><img src="images/6.jpg"></li>
+			<li><img src="images/1.jpg"></li>
+			<li><img src="images/5.jpg"></li>
+			<li><img src="images/2.jpg"></li>
+			<li><img src="images/6.jpg"></li>
 		</ul>
 	</div>
 
