--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -235,27 +235,42 @@
 			</ul>
 		</section>
 	</main>
+
 	<footer id="contacts">
+		<div id="nav-google">
+			<button class="close"
+				onclick="document.getElementById('nav-google').style.display='none'">Hide</button>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11735.096900825745!2d23.26752727668796!3d42.66613961315855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577722449409!5m2!1sen!2sbg"
+				width="600" height="450" frameborder="0" style="border: 0;"
+				allowfullscreen=""></iframe>
+
+		</div>
 		<div class="footer-container">
-			<div class="container">
+			<div class="container"
+				onclick="document.getElementById('nav-google').style.display='block'">
 				<div class="icons">
-					<a href="javascript:void(0);""><i class="fas fa-map-marker-alt" id="fas"></i></a>
+					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
 				<p>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
-			<div class="container email">
+			<div class="container email" style="z-index: 0;">
 				<div class="icons">
-					<a href="mailto:cvqtkokirilov@gmail.com"><i class="fas fa-envelope" id="fas"></i></a>
+					<a href="mailto:cvqtkokirilov@gmail.com"><i
+						class="fas fa-envelope" id="fas"></i></a>
 				</div>
-				<h6 id="mail"><a href="mailto:cvqtkokirilov@gmail.com">Email</a></h6>
+				<h6 id="mail">
+					<a href="mailto:cvqtkokirilov@gmail.com">Email</a>
+				</h6>
 				<p>
 					<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
 				</p>
 			</div>
 			<div class="container">
 				<div class="icons">
-					<a href="javascript:void(0);"><i class="fas fa-phone-volume" id="fas"></i><a>
+					<a href="javascript:void(0);"><i class="fas fa-phone-volume"
+						id="fas"></i><a>
 				</div>
 				<h6 id="call">Call me</h6>
 				<p>(+359) 879 89 29 14</p>
