--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -247,9 +247,9 @@
 
 		</div>
 		<div class="footer-container">
-			<div class="container"
-				onclick="document.getElementById('nav-google').style.display='block'">
-				<div class="icons">
+			<div class="container">
+				<div class="icons"
+					onclick="document.getElementById('nav-google').style.display='block'">
 					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
@@ -277,9 +277,9 @@
 			</div>
 		</div>
 		<p class="copyright">
-			© 2020 Tsvyatko Kirilov Resume. All Rights Reserved.<a
-				href="https://github.com/Cvqtko">GitHub</a>
-		</p>
+			© 2020 Tsvyatko Kirilov Resume. All Rights Reserved.<a class="git"
+				href="https://github.com/Cvqtko">GitHub</a></p>
+		
 	</footer>
 </body>
 </html>
