--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -33,6 +33,10 @@
 			} // End if
 		});
 	});
+	function myLocation() {
+		window
+				.open("https://www.google.com/maps/place/ul.+%22Belmeken%22+2,+1618+Bakston,+Sofia/@42.6669158,23.2632387,14.5z/data=!4m5!3m4!1s0x40aa84cecc3febb7:0xf139452796a01acf!8m2!3d42.6699639!4d23.2712631");
+	}
 </script>
 </head>
 <body>
@@ -237,25 +241,15 @@
 	</main>
 
 	<footer id="contacts">
-		<div id="nav-google">
-			<button class="close"
-				onclick="document.getElementById('nav-google').style.display='none'">Hide</button>
-			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11735.096900825745!2d23.26752727668796!3d42.66613961315855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577722449409!5m2!1sen!2sbg"
-				width="600" height="450" frameborder="0" style="border: 0;"
-				allowfullscreen=""></iframe>
-
-		</div>
 		<div class="footer-container">
 			<div class="container">
-				<div class="icons"
-					onclick="document.getElementById('nav-google').style.display='block'">
+				<div class="icons" onclick="myLocation()">
 					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
 				<p>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
-			<div class="container email" style="z-index: 0;">
+			<div class="container email">
 				<div class="icons">
 					<a href="mailto:cvqtkokirilov@gmail.com"><i
 						class="fas fa-envelope" id="fas"></i></a>
@@ -278,8 +272,9 @@
 		</div>
 		<p class="copyright">
 			© 2020 Tsvyatko Kirilov Resume. All Rights Reserved.<a class="git"
-				href="https://github.com/Cvqtko">GitHub</a></p>
-		
+				href="https://github.com/Cvqtko">GitHub</a>
+		</p>
+
 	</footer>
 </body>
 </html>
