Added iframe to location tab

--- a/17. My CV/WebContent/map.html
+++ b/17. My CV/WebContent/map.html
@@ -25,13 +25,28 @@
 	border: 1px solid black;
 	width: 350px;
 	height: 150px;
+	padding-top: 0px;
 }
 
 #close {
 	display: none;
 	margin-left: 320px;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	background: none;
+	font-size: 1.25em;
 }
 
+#map > button {
+  opacity: 0.7;
+  position:relative;
+  float: right;
+  right:5px;
+  bottom:160px;
+  transition: 0.5s;
+  color: black;
+}
 #show-map {
 	
 }
@@ -39,7 +54,7 @@
 </head>
 <body>
 	<button id="show-map" onclick=myLocation()>Click Me!!!</button>
-	<button id="close" onclick=closed()>&times;</button>
+
 	<div id="map">
 
 
@@ -47,6 +62,7 @@
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.5935512004303!2d23.26907441472004!3d42.66996782346768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577795927485!5m2!1sen!2sbg"
 			width="350" height="150" frameborder="0" style="border: 0;"
 			allowfullscreen=""></iframe>
+		<button id="close" onclick=closed()>&times;</button>
 	</div>
 
 </body>
