--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -238,8 +238,16 @@
 
 	<footer id="contacts">
 		<div class="footer-container">
-			<div class="container">
-				<div class="icons" onclick="myLocation()">
+			<div id="map">
+				<iframe class=""
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.5935512004303!2d23.26907441472004!3d42.66996782346768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577795927485!5m2!1sen!2sbg"
+					width="350" height="150" frameborder="0" style="border: 0;"
+					allowfullscreen=""></iframe>
+				<button id="close" onclick=closed()>&times;</button>
+			</div>
+			<div class="container" id="hide-map">
+
+				<div class="icons" onclick=myLocation()>
 					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
 				<h6 id="location">Location</h6>
