Added close button for the google map

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -245,7 +245,7 @@
 
 				<button id="close" onclick=hideMap()>&times;</button>
 			</div>
-			<div class="container" id="hide-map">
+			<div class="container hide-map" id="hide-map">
 
 				<div class="icons" onclick=showMap()>
 					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
@@ -265,7 +265,7 @@
 					<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
 				</p>
 			</div>
-			<div class="container">
+			<div class="container call">
 				<div class="icons">
 					<a href="javascript:void(0);"><i class="fas fa-phone-volume"
 						id="fas"></i><a>
