--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -237,14 +237,13 @@
 	</main>
 
 	<footer id="contacts">
-		<div class="footer-container">
-			<div id="map">
-				<iframe class=""
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.5935512004303!2d23.26907441472004!3d42.66996782346768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577795927485!5m2!1sen!2sbg"
-					></iframe>
+		<div id="map" onclick="hideMap()">
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34166.66299361514!2d23.281586912350374!3d42.662134741553885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84cecc3febb7%3A0xf139452796a01acf!2sul.%20%22Belmeken%22%202%2C%201618%20Bakston%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1577883171325!5m2!1sen!2sbg"></iframe>
 
-				<button id="close" onclick=hideMap()>&times;</button>
-			</div>
+		</div>
+		<div class="footer-container">
+
 			<div class="container hide-map" id="hide-map">
 
 				<div class="icons" onclick=showMap()>
