--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -9,31 +9,10 @@
 	integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css" type="text/css" />
-<script src="javascript/styles.js"></script>
+<script src="javascript/functions.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-	$(document).ready(function() {
-		// Add smooth scrolling to all links
-		$("a").on('click', function(event) {
-			// Make sure this.hash has a value before overriding default behavior
-			if (this.hash !== "") {
-				// Prevent default anchor click behavior
-				event.preventDefault();
-				// Store hash
-				var hash = this.hash;
-				// Using jQuery's animate() method to add smooth page scroll
-				// The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-				$('html, body').animate({
-					scrollTop : $(hash).offset().top
-				}, 1600, function() {
-					// Add hash (#) to URL when done scrolling (default click behavior)
-					window.location.hash = hash;
-				});
-			} // End if
-		});
-	});
-</script>
+<script src="javascript/navigation.js"></script>
 </head>
 <body>
 	<header id="header">
@@ -249,8 +228,8 @@
 				<div class="icons" onclick=showMap()>
 					<a href="#contacts"><i class="fas fa-map-marker-alt" id="fas"></i></a>
 				</div>
-				<h6 id="location">Location</h6>
-				<p>2 Belmeken Str., Sofia, Bulgaria</p>
+				<h6 id="location" onclick=showMap()>Location</h6>
+				<p onclick=showMap()>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
 			<div class="container email">
 				<div class="icons">
