Added sendEmail function

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -232,16 +232,12 @@
 				<p onclick=showMap()>2 Belmeken Str., Sofia, Bulgaria</p>
 			</div>
 			<div class="container email">
-				<div class="icons">
+				<div class="icons" onclick="sendEmail()">
 					<a href="mailto:cvqtkokirilov@gmail.com"><i
 						class="fas fa-envelope" id="fas"></i></a>
 				</div>
-				<h6 id="mail">
-					<a href="mailto:cvqtkokirilov@gmail.com">Email</a>
-				</h6>
-				<p>
-					<a href="mailto:cvqtkokirilov@gmail.com">cvqtkokirilov@gmail.com</a>
-				</p>
+				<h6 id="mail" onclick="sendEmail()">Email</h6>
+				<p onclick="sendEmail()">cvqtkokirilov@gmail.com</p>
 			</div>
 			<div class="container call">
 				<div class="icons">
