--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -94,7 +94,7 @@
 		</section>
 		<section class="skills">
 			<div class="education">
-				<h1 class="education-h1">My education</h1>
+				<h1>My education</h1>
 				<div class="education-uni">
 					<div class="education-year">
 						<h4>2014-2015</h4>
@@ -135,17 +135,41 @@
 					</div>
 				</div>
 			</div>
-			<div class="skills-1" id="skills">
-				<h1 class="skills-h1">My skills</h1>
+			<div class="myskills" id="skills">
+				<h1>My Skills</h1>
+
+				<ul class="skills-ul">
+					<li><h3>JAVA</h3> <span class="bar"><span class="java"></span></span></li>
+					<li><h3>HTML5</h3> <span class="bar"><span class="html"></span></span></li>
+
+					<li><h3>CSS3</h3> <span class="bar"><span class="css"></span></span></li>
+
+					<li><h3>MySQL</h3> <span class="bar"><span
+							class="my-sql"></span></span></li>
+					<li><h3>JavaScript</h3> <span class="bar"><span
+							class="javascript"></span></span></li>
+					<li><h3>JUnit & Mockito</h3> <span class="bar"><span
+							class="junit"></span></span></li>
+					<li><h3>Design Patterns</h3> <span class="bar"><span
+							class="design-patterns"></span></span></li>
+				</ul>
+
+
+
+
+
+
+
+
 			</div>
 		</section>
 		<section class="skills">
-			<div class="skills-2">
-				<h1 class="skills-h1">My skills</h1>
+			<div class="myskills">
+				<h1>My skills</h1>
 			</div>
 			<div class="experience">
 				<div class="education">
-					<h1 class="education-h1">My education</h1>
+					<h1>My education</h1>
 					<div class="education-uni">
 						<div class="education-year">
 							<h4>2014-2015</h4>
