--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -13,6 +13,7 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="javascript/navigation.js"></script>
+<script src="javascript/skills.js"></script>
 </head>
 <body>
 	<header id="header">
@@ -139,28 +140,20 @@
 				<h1>My Skills</h1>
 
 				<ul class="skills-ul">
-					<li><h3>JAVA</h3> <span class="bar"><span class="java"></span></span></li>
-					<li><h3>HTML5</h3> <span class="bar"><span class="html"></span></span></li>
+					<li><h3>JAVA</h3> <span class="bar"><span class="java" id="java"></span></span></li>
+					<li><h3>HTML5</h3> <span class="bar"><span class="html" id ="html"></span></span></li>
 
-					<li><h3>CSS3</h3> <span class="bar"><span class="css"></span></span></li>
+					<li><h3>CSS3</h3> <span class="bar"><span class="css" id ="css"></span></span></li>
 
 					<li><h3>MySQL</h3> <span class="bar"><span
-							class="my-sql"></span></span></li>
+							class="my-sql" id="my-sql"></span></span></li>
 					<li><h3>JavaScript</h3> <span class="bar"><span
-							class="javascript"></span></span></li>
+							class="javascript" id="javascript"></span></span></li>
 					<li><h3>JUnit & Mockito</h3> <span class="bar"><span
-							class="junit"></span></span></li>
+							class="junit" id="junit"></span></span></li>
 					<li><h3>Design Patterns</h3> <span class="bar"><span
-							class="design-patterns"></span></span></li>
+							class="design-patterns"  id="design-patterns"></span></span></li>
 				</ul>
-
-
-
-
-
-
-
-
 			</div>
 		</section>
 		<section class="skills">
