Added certificates section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -138,12 +138,14 @@
 			</div>
 			<div class="myskills" id="skills">
 				<h1>My Skills</h1>
+				<ul>
+					<li><h3>JAVA</h3> <span class="bar"><span class="java"
+							id="java"></span></span></li>
+					<li><h3>HTML5</h3> <span class="bar"><span class="html"
+							id="html"></span></span></li>
 
-				<ul class="skills-ul">
-					<li><h3>JAVA</h3> <span class="bar"><span class="java" id="java"></span></span></li>
-					<li><h3>HTML5</h3> <span class="bar"><span class="html" id ="html"></span></span></li>
-
-					<li><h3>CSS3</h3> <span class="bar"><span class="css" id ="css"></span></span></li>
+					<li><h3>CSS3</h3> <span class="bar"><span class="css"
+							id="css"></span></span></li>
 
 					<li><h3>MySQL</h3> <span class="bar"><span
 							class="my-sql" id="my-sql"></span></span></li>
@@ -152,14 +154,36 @@
 					<li><h3>JUnit & Mockito</h3> <span class="bar"><span
 							class="junit" id="junit"></span></span></li>
 					<li><h3>Design Patterns</h3> <span class="bar"><span
-							class="design-patterns"  id="design-patterns"></span></span></li>
+							class="design-patterns" id="design-patterns"></span></span></li>
 				</ul>
 			</div>
 		</section>
 		<section class="skills">
-			<div class="myskills">
-				<h1>My skills</h1>
+			<div class="certificates">
+				<h1>Certificates</h1>
+				<div class="certificates-container">
+					<div class="sertificate">
+						<i class="fa fa-cog"></i>
+						<h4>Why choose me</h4>
+						<p>Fast learning, diligent, I’m determined to contribute to
+							the company / project success doing whatever it takes!</p>
+					</div>
+					<div class="sertificate">
+						<i class="fa fa-laptop"></i>
+						<h4>What I do</h4>
+						<p>Strong Software Developing skills using Java, mixed with
+							good HTML5 and SQL understanding.</p>
+					</div>
+					<div class="sertificate">
+						<i class="far fa-thumbs-up"></i>
+						<h4>My mission</h4>
+						<p>To deliver the next generation of information technology
+							services and solutions, exceeding all client expectations.</p>
+					</div>
+				</div>
 			</div>
+
+
 			<div class="experience">
 				<div class="education">
 					<h1>My education</h1>
