--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -159,21 +159,32 @@
 			</div>
 		</section>
 		<section class="skills">
-			<div id="oop-certificate" class="certificate" onclick="hideElement('oop-certificate')">
-				<embed src="images/java_OOP_RecordOfAchievement.pdf"/>
+			<div id="oop-certificate" class="certificate"
+				onclick="hideElement('oop-certificate')">
+				<embed src="images/java_OOP_RecordOfAchievement.pdf" />
 			</div>
-	 		<div id="game-certificate" class="certificate" onclick="hideElement('game-certificate')">
-				<embed src="images/java_Game_RecordOfAchievement.pdf"/>
+			<div id="game-certificate" class="certificate"
+				onclick="hideElement('game-certificate')">
+				<embed src="images/java_Game_RecordOfAchievement.pdf" />
 			</div>
- 
+
+
 			<div class="certificates">
 				<h1>Certificates</h1>
+				<div class="certificates-container">
+					<div class="sertificate">
+						<h4>
+							I'm currently working towards a certificate for Java Web
+							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>
+						</h4>
+					</div>
+				</div>
 				<div class="certificates-container">
 					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
 						<h4>Why choose me</h4>
-						<p>Fast learning, diligent, I’m determined to contribute to
-							the company / project success doing whatever it takes!</p>
+<!-- 						<p>Fast learning, diligent, I’m determined to contribute to
+							the company / project success doing whatever it takes!</p> -->
 					</div>
 					<div class="sertificate" onclick="showElement('game-certificate')">
 						<img src="images/certificate.png">
