Updated the certification section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -173,18 +173,18 @@
 				<h1>Certificates</h1>
 				<div class="certificates-container">
 					<div class="sertificate">
-						<h4>
+						<h6>
 							I'm currently working towards a certificate for Java Web
-							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>
-						</h4>
+							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>. Please check my repositories.
+						</h6>
 					</div>
 				</div>
 				<div class="certificates-container">
 					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
 						<h4>Why choose me</h4>
-<!-- 						<p>Fast learning, diligent, I’m determined to contribute to
-							the company / project success doing whatever it takes!</p> -->
+						<p>Fast learning, diligent, I’m determined to contribute to
+							the company / project success doing whatever it takes!</p>
 					</div>
 					<div class="sertificate" onclick="showElement('game-certificate')">
 						<img src="images/certificate.png">
