Updated certificates section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -172,29 +172,31 @@
 			<div class="certificates">
 				<h1>Certificates</h1>
 				<div class="certificates-container">
-					<div class="sertificate">
-						<h6>
+					<div class="sertificate soft-uni">
+						<h5>
 							I'm currently working towards a certificate for Java Web
-							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>. Please check my repositories.
-						</h6>
+							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>.
+							Please check my repositories.
+						</h5>
 					</div>
 				</div>
 				<div class="certificates-container">
 					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
-						<h4>Why choose me</h4>
-						<p>Fast learning, diligent, I’m determined to contribute to
-							the company / project success doing whatever it takes!</p>
+						<h6>
+							Object-Oriented<br> Programming in Java
+						</h6>
+						<p>Six-week online course, 5 week assignments, lots of
+							programming exercises and a final exam.</p>
 					</div>
 					<div class="sertificate" onclick="showElement('game-certificate')">
 						<img src="images/certificate.png">
-						<h4>What I do</h4>
-						<p>Strong Software Developing skills using Java, mixed with
-							good HTML5 and SQL understanding.</p>
+						<h6>Confirmation of Participation<br>(Project completed)</h6>
+						<p>Workshop covering Version Control Systems, Software Design Patterns, Java GUIs with a final project.</p>
 					</div>
 					<div class="sertificate">
 						<img src="images/certificate.png">
-						<h4>My mission</h4>
+						<h6>My mission</h6>
 						<p>To deliver the next generation of information technology
 							services and solutions, exceeding all client expectations.</p>
 					</div>
