Small changes on the footer

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -93,6 +93,7 @@
 				</div>
 			</div>
 		</section>
+		
 		<section class="skills">
 			<div class="education">
 				<h1>My education</h1>
@@ -191,8 +192,11 @@
 					</div>
 					<div class="sertificate" onclick="showElement('game-certificate')">
 						<img src="images/certificate.png">
-						<h6>Confirmation of Participation<br>(Project completed)</h6>
-						<p>Workshop covering Version Control Systems, Software Design Patterns, Java GUIs with a final project.</p>
+						<h6>
+							Confirmation of Participation<br>(Project completed)
+						</h6>
+						<p>Workshop covering Version Control Systems, Software Design
+							Patterns, Java GUIs with a final project.</p>
 					</div>
 					<div class="sertificate">
 						<img src="images/certificate.png">
@@ -303,7 +307,7 @@
 			<div class="container call">
 				<div class="icons">
 					<a href="javascript:void(0);"><i class="fas fa-phone-volume"
-						id="fas"></i><a>
+						id="fas"></i></a>
 				</div>
 				<h6 id="call">Call me</h6>
 				<p>(+359) 879 89 29 14</p>
