Added smooth scroll to certificates

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -173,7 +173,7 @@
 			<div class="certificates">
 				<h1>Certificates</h1>
 				<div class="certificates-container">
-					<div class="sertificate soft-uni">
+					<div class="sertificate soft-uni" onclick="smoothScrow(repositories)">
 						<h5>
 							I'm currently working towards a certificate for Java Web
 							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>.
